[Bug] [UI] Insert variables into inputs have content hidden behind button.

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -521,6 +521,10 @@
 	.sui-insert-variables {
 		position: relative;
 
+		.sui-form-control {
+			padding-right: #{($form--input-height-base - 1px) + 14px};
+		}
+
 		.select-container {
 			position: absolute;
 			top: 0;
